# IO_3_1

./: CMakeLists.txt
data/: config.json
include/: ContactListener.h  EntityManager.h  Platform.h  PlatformsManager.h  Player.h  RectangleEntity.h  json.hpp  utilities.h
src/: ContactListener.cpp  EntityManager.cpp  Platform.cpp  PlatformsManager.cpp  Player.cpp  RectangleEntity.cpp  main.cpp  utilities.cpp
